CAY-1997 Difference in NULL handling inside the path between PropertyUtils and DataObject.readNestedProperty